More fixes to make improve site formatting on mobile

--- a/webapp/src/app.css
+++ b/webapp/src/app.css
@@ -15,3 +15,8 @@ a {
 a:visited {
     color: var(--qudcolor-B);
 }
+
+/* Colors */
+.border-qudcolor-K {
+    border-color: var(--qudcolor-K);
+}
